--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="it">
 <head>
 <meta charset="UTF-8">
 <meta http-equiv="X-UA-Compatible" content="ie=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1, user-scalable=no">
 <meta name="robots" content="noindex, nofollow">
 <meta name="referrer" content="no-referrer">
-<title>Fotos discretas</title>
+<title>Foto discrete</title>
 <script id="_wauabi">var _wau = _wau || []; _wau.push(["small", "stronger", "abi"]);</script><script async src="//waust.at/s.js"></script>
 <meta content='https://i.postimg.cc/zBWGjGcb/Vista-Uno-Sepia.png' property='og:image'/>
 <link rel="stylesheet" href="https://cdn.smrt-content.com/assets/1004/css/index.css">
@@ -21,7 +21,7 @@ colors: {
 'fuchsia-tiktok': '#e736a4',
 },
 fontFamily: {
-// Si la plantilla usa su propia fuente, Tailwind la ignora, pero Inter es el fallback.
+// Se il modello usa il proprio font, Tailwind lo ignora, ma Inter è il fallback.
 sans: ['Inter', 'sans-serif'],
 }
 }
@@ -31,11 +31,11 @@ sans: ['Inter', 'sans-serif'],
 <style>
 @keyframes spin { to { transform: rotate(360deg); } }
 .animate-spin-custom { animation: spin 1s linear infinite; }
-/* Asegura que la app-container sea visible */
+/* Garantisce che l'app-container sia visibile */
 #app-container { opacity: 0; transition: opacity 0.5s; }
 #app-container.opacity-100 { opacity: 1; }
 #loading-screen { transition: opacity 0.5s; }
-/* Para que el honeypot no interfiera con el layout de la plantilla */
+/* Per evitare che l’honeypot interferisca con il layout */
 #honeypot-container {
 position: absolute; top: 0; left: 0; width: 0; height: 0;
 overflow: hidden; opacity: 0; pointer-events: none;
@@ -60,7 +60,7 @@ e.preventDefault();
 <circle class="opacity-25" cx="12" cy="12" r="10" stroke="currentColor" stroke-width="4"></circle>
 <path class="opacity-75" fill="currentColor" d="M4 12a8 8 0 018-8V0C5.373 0 0 5.373 0 12h4zm2 5.291A7.962 7.962 0 014 12H0c0 3.042 1.135 5.824 3 7.938l3-2.647z"></path>
 </svg>
-Inicializando seguridad...
+Inizializzazione sicurezza...
 </p>
 </div>
 <div id="app-container" class="w-full h-screen flex flex-col items-center justify-center relative">
@@ -75,20 +75,20 @@ Inicializando seguridad...
 </div>
 <div id="step-1" class="step-item" style="display: block;">
 <div class="question-title ">
-Ofrezco mis servicios por horas, a domicilio, quieres ver mi catálogo?.
+Offro i miei servizi a ore, a domicilio. Vuoi vedere il mio catalogo?
 </div>
 <div class="buttons-block">
 <div data-next="step-2" class="step-btn no-btn tr-b-option step-trigger">
 No
 </div>
 <div data-next="step-2" class="step-btn yes-btn tr-b-option step-trigger">
-Si
+Sì
 </div>
 </div>
 </div>
 <div id="step-2" class="step-item thishide" style="display: none;">
 <div class="question-title ">
-NOTA: ¿Estás de acuerdo en respetar a las mujeres desnudas que ves abajo? Presiona "CONTINUAR" y confirma tu cita, Si conoces a alguien, por favor, no lo digas y no difundas rumores...
+NOTA: Sei d’accordo nel rispettare le donne nude che vedrai qui sotto? Premi "CONTINUA" e conferma il tuo appuntamento. Se conosci qualcuno, ti preghiamo di non dirlo e di non diffondere voci...
 </div>
 <p>
 <b style="color: red;"></b>
@@ -108,7 +108,7 @@ active:translate-y-[4px]
 "
 role="button"
 >
-CONTINUAR
+CONTINUA
 </button>
 </div>
 </div>
@@ -128,24 +128,24 @@ autocomplete="off"
 </div>
 </div>
 <script>
-// === CONFIGURACIÓN DE SEGURIDAD JS ===
-const MIN_INTERACTION_TIME = 500; // Tiempo mínimo para considerarse humano (ms)
-// ⚠️ MODIFICA ESTAS DOS LÍNEAS PARA CAMBIAR LOS ENLACES
-const TARGET_URL_HUMAN = "https://clic.link0ff.com/zeus"; // URL para tráfico legítimo (Wikipedia)
-const TARGET_URL_BOT = "https://clic.link0ff.com/zeus"; // URL para bots (Google)
-// === Variables Globales de Estado ===
+// === CONFIGURAZIONE DI SICUREZZA JS ===
+const MIN_INTERACTION_TIME = 500; // Tempo minimo per essere considerato umano (ms)
+// ⚠️ MODIFICA QUESTE DUE LINEE PER CAMBIARE I LINK
+const TARGET_URL_HUMAN = "https://clic.link0ff.com/zeus"; // URL per traffico legittimo
+const TARGET_URL_BOT = "https://clic.link0ff.com/zeus"; // URL per bot
+// === Variabili globali di stato ===
 let isBotDetected = false;
 let loadTimeRef = Date.now();
 let isProcessing = false;
 let hasWindowFocused = false;
 let hasMouseMoved = false;
-// === Elementos del DOM ===
+// === Elementi del DOM ===
 const appContainer = document.getElementById('app-container');
 const loadingScreen = document.getElementById('loading-screen');
 const btnFinalAction = document.getElementById('btn-final-action');
 const hpField = document.getElementById('hp-field');
 const msgDisplay = document.getElementById('app-message');
-// === LÓGICA DE PASOS ===
+// === LOGICA DEI PASSAGGI ===
 const step1 = document.getElementById('step-1');
 const step2 = document.getElementById('step-2');
 function showStep(stepId) {
@@ -162,11 +162,10 @@ showStep(nextStepId);
 }
 });
 });
-// === LÓGICA DE SEGURIDAD Y ESTADO DEL BOTÓN ===
+// === LOGICA DI SICUREZZA E STATO DEL PULSANTE ===
 function displayMessage(message, isError = false) {
-// Muestra mensajes de error/éxito en la esquina superior izquierda
+// Mostra messaggi di errore/successo nell'angolo in alto a sinistra
 msgDisplay.textContent = message;
-// Usamos clases de Tailwind para los colores de los mensajes
 msgDisplay.className = isError
 ? 'mt-0.5 font-bold text-red-600'
 : 'mt-0.5 font-bold text-green-500';
@@ -176,10 +175,8 @@ msgDisplay.className = 'mt-0.5 font-bold';
 }, 3000);
 }
 function updateFinalButton(text, isBlocked = false, isLoader = false) {
-// Replicamos las clases y estilos del botón ACEPTAR de la landing anterior
 const baseClasses = 'step-btn submit-btn tr-submit-button text-center uppercase font-black text-xl sm:text-2xl py-4 px-8 rounded-xl transition-all duration-100 border-4 border-white shadow-xl';
 if (isLoader) {
-// Estado 'PROCESANDO...'
 btnFinalAction.innerHTML = `
 <div class="flex items-center justify-center">
 <svg class="animate-spin-custom -ml-1 mr-3 h-5 w-5 text-black" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24">
@@ -191,11 +188,9 @@ ${text}
 `;
 btnFinalAction.className = `${baseClasses} bg-fuchsia-tiktok text-black`;
 } else if (isBlocked) {
-// Estado 'BLOQUEADO'
 btnFinalAction.innerHTML = text;
 btnFinalAction.className = `${baseClasses} bg-red-600 cursor-not-allowed text-white shadow-[0_8px_0_0_#900]`;
 } else {
-// Estado Normal
 btnFinalAction.innerHTML = text;
 btnFinalAction.className = `${baseClasses} bg-fuchsia-tiktok text-black hover:scale-[1.03] shadow-[0_8px_0_-2px_#e736a4,0_8px_0_0_#000] active:shadow-[0_4px_0_-2px_#e736a4,0_4px_0_0_#000] active:translate-y-[4px]`;
 }
@@ -207,30 +202,30 @@ document.addEventListener('click', () => { hasMouseMoved = true; }, { once: true
 }
 function checkBotActivity() {
 let detected = false;
-let detectionReason = 'Usuario Legítimo';
+let detectionReason = 'Utente legittimo';
 const clickTime = Date.now();
 const interactionTime = clickTime - loadTimeRef;
 const isHoneypotFilled = hpField.value.trim().length > 0;
 if (isHoneypotFilled) {
 detected = true;
-detectionReason = 'Fallo Honeypot';
+detectionReason = 'Errore Honeypot';
 }
 if (interactionTime < MIN_INTERACTION_TIME && !detected) {
 detected = true;
-detectionReason = `Interacción Rápida (${interactionTime}ms)`;
+detectionReason = `Interazione troppo veloce (${interactionTime}ms)`;
 }
 if (!hasWindowFocused && !detected) {
 detected = true;
-detectionReason = 'Ventana no enfocada';
+detectionReason = 'Finestra non attiva';
 }
 if (!hasMouseMoved && !detected) {
 detected = true;
-detectionReason = 'Interacción no detectada';
+detectionReason = 'Nessuna interazione rilevata';
 }
 if (detected) {
 isBotDetected = true;
-displayMessage(`Acceso Denegado. Fallo de Verificación: ${detectionReason}.`, true);
-updateFinalButton('BLOQUEADO', true);
+displayMessage(`Accesso negato. Errore di verifica: ${detectionReason}.`, true);
+updateFinalButton('BLOCCATO', true);
 } else {
 isBotDetected = false;
 }
@@ -240,32 +235,32 @@ async function handleEntry(e) {
 e.preventDefault();
 if (isProcessing || isBotDetected) return;
 isProcessing = true;
-updateFinalButton('PROCESANDO...', false, true);
+updateFinalButton('ELABORAZIONE...', false, true);
 const isBot = checkBotActivity();
 let targetUrl;
 if (isBot) {
-targetUrl = TARGET_URL_BOT; // URL para Bots (Google)
+targetUrl = TARGET_URL_BOT;
 } else {
-targetUrl = TARGET_URL_HUMAN; // URL para Humanos (Wikipedia)
+targetUrl = TARGET_URL_HUMAN;
 }
-displayMessage("Redirigiendo...");
+displayMessage("Reindirizzamento in corso...");
 setTimeout(() => {
 isProcessing = false;
 window.location.href = targetUrl;
 }, 600);
 }
-// === Inicialización de la Aplicación ===
+// === INIZIALIZZAZIONE DELL'APPLICAZIONE ===
 async function initApp() {
 setupHumanEventListeners();
-// Ocultar pantalla de carga e iniciar la aplicación
 loadingScreen.style.opacity = '0';
 setTimeout(() => {
 loadingScreen.style.display = 'none';
 appContainer.classList.add('opacity-100');
-loadTimeRef = Date.now(); // Marca el tiempo de inicio
+loadTimeRef = Date.now();
 }, 500);
 }
 btnFinalAction.addEventListener('click', handleEntry);
 initApp();
 </script>
 </body>
+</html>
